@@ -125,7 +125,7 @@ MFEM_USE_GINKGO        = NO
 MFEM_USE_GNUTLS        = NO
 MFEM_USE_NETCDF        = NO
 MFEM_USE_PETSC         = NO
-MFEM_USE_SLEPC          = NO
+MFEM_USE_SLEPC         = NO
 MFEM_USE_MPFR          = NO
 MFEM_USE_SIDRE         = NO
 MFEM_USE_CONDUIT       = NO
@@ -280,12 +280,12 @@ SLEPC_ARCH := arch-linux2-c-debug
 SLEPC_DIR := $(MFEM_DIR)/../slepc/$(SLEPC_ARCH)
 SLEPC_VARS := $(SLEPC_DIR)/lib/slepc/conf/slepc_variables
 SLEPC_FOUND := $(if $(wildcard $(SLEPC_VARS)),YES,)
-SLEPC_INC_VAR = SLEPC_CC_INCLUDES
-SLEPC_LIB_VAR = SLEPC_EXTERNAL_LIB_BASIC
+SLEPC_INC_VAR = SLEPC_INCLUDE
+SLEPC_LIB_VAR = SLEPC_EXTERNAL_LIB
 ifeq ($(SLEPC_FOUND),YES)
-    SLEPC_OPT := $(shell set -n "s/$(SLEPC_INC_VAR) = *//p" $(SLEPC_VARS))
-    SLEPC_LIB := $(shell set -n "s/$(SLEPC_INC_LIB) = *//p" $(SLEPC_VARS))
-    PETSC_LIB := -Wl,-rpath,$(abspath $(SLEPC_DIR))/lib\
+    SLEPC_OPT := $(shell sed -n "s/$(SLEPC_INC_VAR) *= *//p" $(SLEPC_VARS))
+    SLEPC_LIB := $(shell sed -n "s/$(SLEPC_LIB_VAR) *= *//p" $(SLEPC_VARS))
+    SLEPC_LIB := -Wl,-rpath,$(abspath $(SLEPC_DIR))/lib\
         -L$(abspath $(SLEPC_DIR))/lib -lslepc $(SLEPC_LIB)
 endif
 
